fixed viewport height to disable viewport resize on mobile

--- a/src/assets/scss/mySpace.scss
+++ b/src/assets/scss/mySpace.scss
@@ -732,6 +732,7 @@
       position: relative;
       > .image-container {
         width: 100%;
+        height: 400px;
       }
       > .content-container {
         position: absolute;
@@ -753,6 +754,16 @@
 
             > .traits-container {
               font-size: calc(var(--base-font-size) * 1.25);
+            }
+          }
+
+          .skeleton {
+            &:nth-child(1) {
+              width: 100%;
+            }
+
+            &:nth-child(2) {
+              width: calc(100% / 2);
             }
           }
         }
